# core

./: .gitignore  Pipfile  README.md  pyproject.toml
docs/: README.md  aws_cmds  index.md  tmp_sre_req.md
docs/AWS/aws_sysops/: 01_ExamBlueprint.md  02_CloudWatch.md  03_DeploymentProvisioning.md  04_HighAvailability.md  05_StorageDataManagement.md  06_SecurityCompliance.md  07_Networking.md  08_Automation.md  09_AdditionalTopics.md  10_Quiz.md  index.md
docs/Automated Service Mesh with Istio/: index.md
docs/K8s Native Tools/01_01/: Readme.md
docs/Kubernetes/K8s Microservices/: index.md
docs/Kubernetes/K8s Native Tools/: CNCF.md
docs/Learning Docker/: notes.md
docs/Learning Kubernetes/06/: readme.md
docs/Prometheus Monitoring/: README.md
docs/k8s/: README.md
docs/k8s/Automated Service Mesh with Istio/: README.md
docs/k8s/Prometheus Monitoring/: README.md
docs/terraform/up-and-running/: chap2.tf
k8s/: README.md
k8s/K8s Microservices/: Readme.md
k8s/K8s Microservices/03_03/: README.md
k8s/K8s Monitoring with Prometheus/: Readme.md
k8s/K8s Native Tools/: CNCF.md
k8s/K8s Native Tools/01_01/: pink.yaml
k8s/Learning Kubernetes/: notes.md
k8s/Learning Kubernetes/04_01/: Readme.md
k8s/Learning Kubernetes/04_02/: Readme.md
k8s/Learning Kubernetes/04_03/: Readme.md
k8s/Learning Kubernetes/04_04/: Readme.md
k8s/Learning Kubernetes/04_05/: Readme.md
projects/chef/: Notes.md
projects/minikube_in_aws/: main.tf  vars.tf
projects/sierra_mock/: Dockerfile  Makefile  README.md
splunk/: README.md  Vagrantfile
(+176 files in other folders)
