[tool.poetry]
name = "learning"
version = "0.1.0"
description = "Notes and examples of technical learning topics"
authors = ["Michael <5084015+sawyers@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.8.4"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
